--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     </ul>
 
-    <form action="learning.html" method="get">
+    <form action="index.html" method="get">
         <label>Your name:</label>
         <input type="text">
         <input type="submit" name="" id="">
