--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <td>
             <h1>YASH SINGH</h1>
-            <p><em><strong> Science Engineer</strong></em></p>
+            <p><em><strong> Computer Science Engineer</strong></em></p>
 
             <p>Hello! My name is YASH, and I am currently pursuing my B.Tech in Computer Science Engineering. I have
                 always
