--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personel site</title>
+    <style>
+        body {
+            background-color: #EAF6F6;
+        }
+
+        hr {
+
+
+            border-style: none;
+            
+            border-top: dotted;
+            border-color: grey;
+            border-width: 5px;
+            width: 10%;
+            
+        }
+    </style>
 </head>
 
 <body>
@@ -16,7 +33,7 @@
 
         <td>
             <h1>YASH SINGH</h1>
-            <p><em><strong> Computer Science Engineer</strong></em></p>
+            <p><em><strong> Science Engineer</strong></em></p>
 
             <p>Hello! My name is YASH, and I am currently pursuing my B.Tech in Computer Science Engineering. I have
                 always
@@ -29,14 +46,14 @@
 
         </td>
     </table>
-    <hr noshade>
+    <hr>
     <h2>Education</h2>
     <ul>
         <li>High school: <a href="https://bvmschool.in/">BVM SCHOOL</a> </li>
         <li>Matriculate: <a href="https://bvmschool.in/">BVM SCHOOL</a> </li>
         <li>pursuing B.tech: <a href="https://bvcoend.ac.in/"> BVPCOE</a></li>
     </ul>
-    <hr noshade>
+    <hr>
     <h2>Hobbies</h2>
     <ol>
         <li>Dancing</li>
@@ -48,7 +65,7 @@
     <a href="contact.html">
         <h2>Contact Me</h2>
     </a>
-    <hr noshade>
+    <hr>
     <h2>Skills</h2>
     <table cellspacing="10">
         <tr>
@@ -68,7 +85,7 @@
 
     </table>
     </table>
-    <hr noshade>
+    <hr>
 </body>
 
 </html>
