--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             border-color: grey;
             border-width: 5px;
             width: 10%;
+            img{size: auto;}
             
         }
     </style>
