--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </td>
 
         <td>
-            <h1>YASH SINGH</h1>
+            <h1>YASH</h1>
             <p><em><strong> Science Engineer</strong></em></p>
 
             <p>Hello! My name is YASH, and I am currently pursuing my B.Tech in Computer Science Engineering. I have
